--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Wolfactive
-Author: HuyNguyen and PhuongNam mn
+Author: HuyNguyen and PhuongNam mn1
 Description: This theme is mabe by Wolfactive Team Graphic Design and Web Developmant Freelancer.
 Version: 3.0
 */
